# keypirinha-extensions

./: README.md  pyproject.toml
Repos/: repos.py
_sdk/: .gitignore  LICENSE  README.md  pyproject.toml
_sdk/examples/StressTest/: README.md  stresstest.ini  stresstest.py
_sdk/examples/YesNo/: yesno.py
_sdk/src/kpsdk/: __init__.py  _cli.py  _config.py  _dump.py  _getopts.py  _glob.py  _globscan.py  _utils.py  _version.py  _zipfile.py  arch.py  chtime.py  git.py  tmpl.py  windll.py
_sdk/src/kpsdk/cli/: __init__.py  arch.py  chtime.py  tmpl.py
_sdk/src/kpsdk/templates/package/: LICENSE.tmpl  README.md.tmpl  make.cmd.tmpl
_sdk/src/kpsdk/templates/package/src/: {{package_name_lower}}.ini.tmpl  {{package_name_lower}}.py.tmpl
_stub/: LICENSE  README.md  pyproject.toml
_stub/src/: filefilter.py  globex.py  keypirinha.py  keypirinha_api.py  keypirinha_net.py  keypirinha_util.py
_stub/src/chardet/: KPINFO.txt
_stub/src/comtypes/: KPINFO.txt
_stub/src/jwt/: KPINFO.txt
_stub/src/natsort/: KPKINFO.txt
wslssh/: wslssh.ini  wslssh.py
